--- a/angular.json
+++ b/angular.json
@@ -20,18 +20,14 @@
             "outputPath": "dist/spacebot-app",
             "index": "machine_learning/spacebot/app/src/index.html",
             "main": "machine_learning/spacebot/app/src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "machine_learning/spacebot/app/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
               "machine_learning/spacebot/app/src/favicon.ico",
               "machine_learning/spacebot/app/src/assets"
             ],
-            "styles": [
-              "machine_learning/spacebot/app/src/styles.scss"
-            ],
+            "styles": ["machine_learning/spacebot/app/src/styles.scss"],
             "scripts": []
           },
           "configurations": {
@@ -82,19 +78,15 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "machine_learning/spacebot/app/tsconfig.spec.json",
+            "karmaConfig": "machine_learning/spacebot/app/karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
               "machine_learning/spacebot/app/src/favicon.ico",
               "machine_learning/spacebot/app/src/assets"
             ],
-            "styles": [
-              "machine_learning/spacebot/app/src/styles.scss"
-            ],
+            "styles": ["machine_learning/spacebot/app/src/styles.scss"],
             "scripts": []
           }
         }
