--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
+    "@angular-devkit/architect-cli": "^0.1601.5",
     "@angular-devkit/build-angular": "^16.0.6",
     "@angular/cli": "~16.0.2",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.4.4",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
